# RaOcclusion

./: ArucoLibStatic.sln  OpenCv_Debug.props  OpenCv_Release.props  RAOcclusion.sln  README.md
Aruco Sources File/: cameraparameters.cpp  marker.cpp  marker.h  markerdetector.cpp
ArucoLib/: ArucoLib.vcxproj  ArucoLib.vcxproj.filters  ReadMe.txt
ConsoleApplication1/: ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  EssaisOpenGL.cpp  OBJlib.cpp  stdafx.h
Essai static utils/: Essai static utils.cpp  Essai static utils.vcxproj  Essai static utils.vcxproj.filters  ReadMe.txt  aruco_test_board_gl.cpp  aruco_test_video.cpp  stdafx.cpp
Obj files/: voiture.mtl
ObjetEtTracking/: CMakeLists.txt  Doxyfile  FonctionsOpenGL.cpp  FonctionsOpenGL.h  ObjetEtTracking.vcxproj  ObjetEtTracking.vcxproj.filters  cameraPos.cpp  cameraPos.h  main.cpp  objloader.cpp  objloader.h
PriseEnMainOpenGL/: ConsoleApplication1.vcxproj  OBJlib.h
TestsOpenGL/: ReadMe.txt  TestsOpenGL.vcxproj  TestsOpenGL.vcxproj.filters  main.cpp  objloader.cpp  objloader.h
x64/Release/: RaccourciLancement.lnk  board_ville.yml  intrinsicsLogitech.yml
